559905: Code tidy up
for deprecated methods and JavaDoc

Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=559905