@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2008 SAP AG.
+ * Copyright (c) 2008,2020 SAP AG and IBM Corporation.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,6 +7,7 @@
  *
  * Contributors:
  *    SAP AG - initial API and implementation
+ *    Andrew Johnson (IBM Corporation) - fix deprecated method
  *******************************************************************************/
 package org.eclipse.mat.tests.regression.comparator;
 
@@ -51,7 +52,7 @@ public class CSVComparator implements IComparator
             {
                 if (!(baseLine).equals(testLine = testFileReader.readLine()))
                 {
-                    differences.add(new Difference(new Integer(lineNumber).toString(), baseLine, testLine));
+                    differences.add(new Difference(Integer.valueOf(lineNumber).toString(), baseLine, testLine));
                 }
                 if (differences.size() == 10) // add only first 10 differences
                     break;
